<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">
    <!-- 序号 -->
    <TextView
        android:id="@+id/serialNumberTv"
        android:layout_width="0dp"
        android:layout_height="30dp"
		android:layout_weight="1"
		android:gravity="center"
		android:textSize="14sp"
		android:text="@string/serialNumber">
    </TextView>
    <!-- 测点编号 -->
	<TextView
	    android:id="@+id/measurePointNumTv"
	    android:layout_width="0dp"
	    android:layout_height="30dp"
	    android:layout_weight="2"
	    android:gravity="center"
	    android:textSize="14sp"
	    android:text="@string/measureNumber">
	</TextView>
	    <!-- 压力-->
	<TextView
	    android:id="@+id/pressureTv"
	    android:layout_width="0dp"
	    android:layout_height="30dp"
	    android:layout_weight="2"
	    android:gravity="center"
	    android:textSize="14sp"
	    android:text="@string/preassure">

	</TextView>
	    <!-- 温度-->
	<TextView
	    android:id="@+id/temperatureTv"
	    android:layout_width="0dp"
	    android:layout_height="30dp"
	    android:layout_weight="2"
	    android:gravity="center"
	    android:textSize="14sp"
	    android:text="@string/temperatureStr">

	</TextView>
</LinearLayout>