<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
       <!-- 顶部关于 -->
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@xml/paddingcolor"
        android:paddingBottom="@dimen/abc_action_bar_default_padding_end_material" >
        <TextView 
            android:id="@+id/backTv"
            android:text="@string/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@xml/paddingtopbottomrightiszero"
            android:gravity="center"
            android:textSize="20sp" 
            android:textColor="#ffffff"/>
        <TextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/resetPassword"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="200dp"
	    android:orientation="vertical" 
	    android:layout_gravity="center"
	    android:id="@+id/ll"
	    android:gravity="center">
	
	        <TextView  
	            android:id="@+id/tv_zh"  
	            android:layout_width="wrap_content"  
	            android:layout_height="35dip"  
				android:layout_marginStart="10dp"
				android:layout_marginLeft="10dp"
	            android:layout_marginTop="10dip"  
	            android:gravity="bottom"  
	            android:text="@string/resetPasswordSuccess"  
	            android:textColor="#000000"  
	            android:textSize="12sp" />  
	</LinearLayout>
	    

<!-- 返回 --> 
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom">
       	<LinearLayout 
       	    android:layout_width="match_parent"
       	    android:layout_height="50dp"
       	    android:layout_alignParentBottom="true"
       	    android:background="@xml/padding"
       	    android:id="@+id/backLl">
       	   <TextView
	        android:id="@+id/confirmTv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/backStr"
	        android:textSize="18sp"
	        android:layout_gravity="center"/>
       	</LinearLayout>
	</RelativeLayout>
	
	
</LinearLayout>